添加备案信息和icon

--- a/components/index/template.html
+++ b/components/index/template.html
@@ -32,8 +32,13 @@
         <p>contact me and I will delete that. </p>
     </mu-expansion-panel>
     <mu-expansion-panel>
-        <div slot="header">版本信息</div>
+        <div slot="header">网站信息</div>
         <p>网站版本:V0.2.2 谱面数据版本:V20.7.21</p>
+        <p>
+            <div style="text-align: center">
+                <a target="_blank" href="http://www.beian.miit.gov.cn"><span style="font-size: 10px;">桂ICP备20005849号</span></a>
+            </div>
+        </p>
     </mu-expansion-panel>
 </div>
 </div>
